--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.16.0",
-    "babel-helper-plugin-test-runner": "^6.8.0"
+    "babel-helper-plugin-test-runner": "^6.8.0",
+    "gulp": "^3.9.1",
+    "gulp-bump": "^2.4.0"
   },
   "dependencies": {
     "babel-plugin-transform-es2015-modules-commonjs": "^6.8.0",
