--- a/package.json
+++ b/package.json
@@ -7,11 +7,6 @@
     "url": "git@github.com:B-3PO/babel-plugin-commonjs-to-angular-1x.git"
   },
   "main": "lib/index.js",
-  "scripts": {
-    "build": "babel src --out-dir lib --copy-files",
-    "clean": "rm -rf lib",
-    "prepublish": "npm run clean && npm run build"
-  },
   "keywords": [
     "es6",
     "es2015",
@@ -26,6 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
     "babel-helper-plugin-test-runner": "^6.8.0",
     "gulp": "^3.9.1",
     "gulp-bump": "^2.4.0"
